<resources>
    <!-- Branding -->
    <string name="app_name">RUVacant</string>
    <string name="logo_description">Application logo</string>

    <!-- Options Activity -->
    <string name="semester_text">Semester</string>
    <string name="campus_text">Campus</string>
    <string name="level_text">Level</string>
    <string name="save_text">Save</string>
    <string name="semester_icon_description">Semester icon</string>
    <string name="campus_icon_description">Campus icon</string>
    <string name="level_icon_description">Level icon</string>
</resources>
