<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OptionsActivity">

    <!-- BRANDING -->
    <ImageView
        android:id="@+id/options_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintDimensionRatio="640:687"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/options_semester_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- MAIN COMPONENTS -->
    <Button
        android:id="@+id/options_semester_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/semester_text"
        android:background="@drawable/options_buttons_bg"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/options_logo"
        app:layout_constraintBottom_toTopOf="@id/options_campus_button"/>
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/calendar"
        android:elevation="10dp"
        android:outlineProvider="none"
        android:background="@color/options_buttons_color"
        android:contentDescription="@string/semester_icon_description"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/options_semester_button"
        app:layout_constraintStart_toStartOf="@+id/options_semester_button"
        app:layout_constraintTop_toTopOf="@+id/options_semester_button" />

    <Button
        android:id="@+id/options_campus_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".8"
        android:text="@string/campus_text"
        android:textSize="24sp"
        android:background="@drawable/options_buttons_bg"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_semester_button"
        app:layout_constraintBottom_toTopOf="@id/options_level_button"/>
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/pin"
        android:elevation="10dp"
        android:outlineProvider="none"
        android:background="@color/options_buttons_color"
        android:contentDescription="@string/campus_icon_description"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/options_campus_button"
        app:layout_constraintStart_toStartOf="@+id/options_campus_button"
        app:layout_constraintTop_toTopOf="@+id/options_campus_button" />

    <Button
        android:id="@+id/options_level_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".8"
        android:text="@string/level_text"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/options_buttons_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_campus_button"
        app:layout_constraintBottom_toTopOf="@id/options_save_button"/>
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/graduate"
        android:contentDescription="@string/level_icon_description"
        android:elevation="10dp"
        android:outlineProvider="none"
        android:background="@color/options_buttons_color"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/options_level_button"
        app:layout_constraintStart_toStartOf="@+id/options_level_button"
        app:layout_constraintTop_toTopOf="@+id/options_level_button" />

    <Button
        android:id="@+id/options_save_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".8"
        android:text="@string/save_text"
        android:textSize="24sp"
        android:textColor="@color/save_button_text_disabled"
        android:enabled="false"
        android:background="@drawable/save_button_background_disabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_level_button"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>